# kubeagle

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  kubeagle.spec  pyproject.toml  ruff.toml  settings.local.json  ty.toml
.claude/agents/: tui-developer.md  tui-test-engineer.md  tui-ux-specialist.md
.claude/rules/: architecture.md
.codex/skills/visual-analysis/tui_screenshot_capture/: README.md  __init__.py  constants.py  pyproject.toml
.codex/skills/visual-analysis/tui_screenshot_capture/analysis/: __init__.py  expectations.py  prompt_generator.py
.codex/skills/visual-analysis/tui_screenshot_capture/cli/: __init__.py  capture.py  discover.py  list.py
.codex/skills/visual-analysis/tui_screenshot_capture/core/: __init__.py
.codex/skills/visual-analysis/tui_screenshot_capture/discovery/: bindings.py  screens.py  scrollables.py  widgets.py
.codex/skills/visual-analysis/tui_screenshot_capture/engine/: __init__.py  capture_engine.py
.codex/skills/visual-analysis/tui_screenshot_capture/utils/: dimensions.py  parsing.py
Formula/: kubeagle.rb
docs/: README.md
docs/architecture/: data-flow.md  design-patterns.md  overview.md
docs/best-practices/: screen-composition.md  widget-usage.md
docs/controllers/: controller-reference.md
docs/conventions/: code-conventions.md
docs/keyboard/: keybindings.md
docs/models/: model-reference.md
docs/screens/: base-patterns.md  overview.md  screen-reference.md
docs/styling/: css-guide.md
docs/testing/: testing-guide.md
kubeagle/: .coverage  __init__.py  app.py  main.py  themes.py
(+483 files in other folders)
