[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tui-screenshot-capture"
dynamic = ["version"]
description = "TUI Screenshot Capture - Automated screenshot capture for Textual TUI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "textual>=0.50.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
png = [
    "cairosvg>=2.0",
]
dev = [
    "ruff>=0.8.0",
]

[tool.hatch.version]
path = "constants.py"
pattern = 'VERSION = "(?P<version>[^"]+)"'

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # Errors
    "W",      # Warnings
    "F",      # Pyflakes
    "I",      # Isort
    "B",      # Bugbear
    "C4",     # Comprehensions
    "UP",     # Pyupgrade
]
ignore = [
    "E501",   # Line too long
    "B008",   # Do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["tui_screenshot_capture"]
